files/add is_deleted field
